--- a/requirements.txt
+++ b/requirements.txt
@@ -29,13 +29,8 @@ python-dotenv==0.21.1
 gTTS==2.3.1
 Pillow==10.2.0
 psutil==5.9.4
-numpy
-opencv-python
+NumPy==1.26.2
 wheel
 ujson
 wget
 pytz
-
-
-
-
